# chip8_emulator

./: CMakeLists.txt  README.md
include/: Platform.h
include/glad/: glad.h
src/: Chip8.cpp  Chip8.h  Main.cpp  Platform.cpp  glad.c
